<resources>
    <string name="app_name">CompositionGame</string>
    <string name="picture_of_brain">picture of brain</string>
    <string name="name">Состав числа</string>
    <string name="rules">Правила игры: перед вами будет три фигуры, две снизу и одна сверху, в двух из них будут числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равна числу в верхней фигуре, для этого нужно вставить недостающее число. \n\nПример: в верхнем круге число 7, а в одном из нижних знак вопроса, а в другом число 4. Значит на месте вопроситльного знакак должно быть число 3, потому что 3 + 4 = 7</string>
    <string name="understand">Понятно</string>
    <string name="choose_level">Выберите уровень</string>
    <string name="level_test">Тестовый</string>
    <string name="level_easy">Легкий</string>
    <string name="level_medium">Средний</string>
    <string name="level_hard">Тяжелый</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="required_amount_of_right_answers">Необходимое количество правильных ответов: %s</string>
    <string name="emoji">Emoji</string>
    <string name="your_score">Ваш счет: %s</string>
    <string name="required_percent_of_right_answers">Необходимый процент правильных ответов: %s</string>
    <string name="right_answers_percentage">Процент правильных ответов: %s</string>
    <string name="try_again">Попробовать снова</string>
    <string name="time_format_for_timer">%1$02d:%2$02d</string>
    <string name="question">\?</string>
    <string name="right_answers_amount">Правильных ответов %1$d (минимум %2$d)</string>
</resources>