<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="gameResult"
            type="com.example.compositiongame.domain.entity.GameResult" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.fragment.GameFinishedFragment">

        <ImageView
            android:id="@+id/imageViewEmoji"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="48dp"
            android:contentDescription="@string/emoji"
            app:emoji="@{gameResult.winner}"
            app:layout_constraintBottom_toTopOf="@id/TextViewRequiredAnswers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/ic_smile" />

        <TextView
            android:id="@+id/TextViewRequiredAnswers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/TextViewAnswers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:requiredAnswers="@{gameResult.gameSettings.minCountOfRightAnswers}"
            tools:text="@string/required_amount_of_right_answers" />

        <TextView
            android:id="@+id/TextViewAnswers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/TextViewRequiredPercentage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TextViewRequiredAnswers"
            app:userAnswers="@{gameResult.countOfRightAnswers}"
            tools:text="@string/your_score" />

        <TextView
            android:id="@+id/TextViewRequiredPercentage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/TextViewPercentage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TextViewAnswers"
            app:requiredPercentage="@{gameResult.gameSettings.minPercentOfRightAnswers}"
            tools:text="@string/required_percent_of_right_answers" />

        <TextView
            android:id="@+id/TextViewPercentage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/buttonTryAgain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TextViewRequiredPercentage"
            app:userPercentage="@{gameResult.percentage}"
            tools:text="@string/right_answers_percentage" />

        <Button
            android:id="@+id/buttonTryAgain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/try_again"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>